# workarea_assistent

./: CHANGELOG.md  README.md  pyproject.toml
src/wa/: __main__.py  cli.py  constants.py  errors.py  notes.py  projects.py  schema.py  shell.py
